--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "mysql2": "^2.3.3",
+    "sequelize": "^6.21.2",
+    "sqlite3": "^5.0.8",
     "stream-chat": "^6.7.3"
   },
   "name": "dev-messenger",
