--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "mysql2": "^2.3.3",
+    "requirejs": "^2.3.6",
     "sequelize": "^6.21.2",
     "sqlite3": "^5.0.8",
     "stream-chat": "^6.7.3"
