--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "requirejs": "^2.3.6",
     "sequelize": "^6.21.2",
     "sqlite3": "^5.0.8",
-    "stream-chat": "^6.7.3"
+    "stream-chat": "^6.8.0",
+    "stream-chat-react": "^9.4.1"
   },
   "name": "dev-messenger",
   "description": "",
